[package]
name = "sharks"
version = "0.6.0"
authors = [
  "Aitor Ruano <codearm@pm.me>",
  "Multifactor, Inc. <https://multifactor.com>",
]
description = "Fast, small and secure Shamir's Secret Sharing library crate"
homepage = "https://github.com/multifactor/gf256sss"
repository = "https://github.com/multifactor/gf256sss"
documentation = "https://docs.rs/gf256sss"
readme = "README.md"
keywords = ["shamir", "secret", "sharing", "share", "crypto"]
categories = ["algorithms", "cryptography", "mathematics"]
license = "MIT OR Apache-2.0"
edition = "2021"
include = [
  "src/**",
  "README.md",
  "CHANGELOG.md",
  "COPYRIGHT",
  "LICENSE-APACHE",
  "LICENSE-MIT",
]

[badges]
maintenance = { status = "actively-developed" }
codecov = { repository = "multifactor/gf256sss" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["std", "zeroize_memory"]
std = ["rand/std", "rand/std_rng", "rand/os_rng"]
fuzzing = ["std", "arbitrary"]
zeroize_memory = ["zeroize"]

[dependencies]
rand = { version = "0.9.2", default-features = false }
hashbrown = "0.16"
arbitrary = { version = "1.4", features = ["derive"], optional = true }
zeroize = { version = "1.2.0", features = ["zeroize_derive"], optional = true }

[dev-dependencies]
criterion = "0.7"
rand_chacha = "0.9"
rstest = "0.26.1"

[[bench]]
name = "benchmarks"
harness = false

[package.metadata.docs.rs]
features = ["std"]
all-features = false
rustdoc-args = ["--cfg", "docsrs"]
